--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 <a href="https://scholar.google.com/citations?user=71p6OBkAAAAJ">Junhyeok Lee</a>,
               </span>
               <span class="author-block">
+                <a href="https://scholar.google.com/citations?user=5wgj-vYAAAAJ">Thomas Thebaud</a>,
+              </span>
+              <span class="author-block">
                 <a href="https://scholar.google.es/citations?user=WepMzXoAAAAJ">Laureano Moro-Velazquez</a>,
               </span>
               <span class="author-block">
@@ -191,21 +194,6 @@
 
 
 
-
-<!-- <section class="hero teaser">
-    <div class="container is-max-desktop is-centered has-text-centered">
-      <div class="hero-body">
-        <div class="columns is-centered has-text-centered">
-          <div class="column is-four-fifths">
-            <h2 class="title is-3">Watermark Encodec</h2>
-            <img src="./static/images/pic2.png" class="interpolation-image" width="600"
-              alt="Interpolate start reference image." />
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
 <!-- <section id="toc" class="section" style="padding-top: 0px;"> -->
   <div class="container  is-fluid">
     <!-- Abstract. -->
@@ -228,6 +216,13 @@
           <li><a href="#emocaptts"><b>EmoCapTTS</b></a></li>
           <li><a href="#capttsse"><b>CapTTS-SE</b></a></li>
           <li><a href="#agenttts"><b>AgentTTS</b></a></li>
+          <li><a href="#interfaces" style="font-size: 1.5em;"><b>Interfaces</b></a></li>
+          <li><a href="#qualification"><b>Qualification</b></a></li>
+          <li><a href="#capttsui"><b>CapTTS</b></a></li>
+          <li><a href="#acccapttsui"><b>AccCapTTS</b></a></li>
+          <li><a href="#emocapttsui"><b>EmoCapTTS</b></a></li>
+          <li><a href="#capttsseui"><b>CapTTS-SE</b></a></li>
+          <li><a href="#agentttsui"><b>AgentTTS</b></a></li>
           </ul>
         </div>
 
@@ -1854,7 +1849,135 @@
 
 
 
+<section id="interfaces" class="hero">
+  <div class="hero-body">
+    <div class="container is-fluid">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h2 class="title is-3">Annotation Interfaces</h2>
+        </div>
+      </div>
+      <div style="width: 1000px; margin: auto;">
+          <hr>
+          
+          <div class="box has-background-light">
+            <div class="content is-size-5">
+              We provide the qualification and annotation interfaces used in our subjective evaluations.
+            </div>
+          </div>
+          <hr>
+        </div>
+    </div>
+  </div>
+</section>
 
+<section id="qualification" class="hero">
+  <div class="hero-body">
+    <div class="container is-fluid">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h3 class="title is-4">Annotator Qualification Interface</h3>
+        </div>
+      </div>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <img src="./static/ui/annotators.png" class="interpolation-image" width="800"
+            alt="Animated demonstration of SSR-Speech." />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="capttsui" class="hero">
+  <div class="hero-body">
+    <div class="container is-fluid">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h3 class="title is-4">CapTTS Interface</h3>
+        </div>
+      </div>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <img src="./static/ui/captts.png" class="interpolation-image" width="800"
+            alt="Animated demonstration of SSR-Speech." />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="acccapttsui" class="hero">
+  <div class="hero-body">
+    <div class="container is-fluid">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h3 class="title is-4">AccCapTTS Interface</h3>
+        </div>
+      </div>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <img src="./static/ui/acccaptts.png" class="interpolation-image" width="800"
+            alt="Animated demonstration of SSR-Speech." />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="emocapttsui" class="hero">
+  <div class="hero-body">
+    <div class="container is-fluid">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h3 class="title is-4">EmoCapTTS Interface</h3>
+        </div>
+      </div>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <img src="./static/ui/emocaptts.png" class="interpolation-image" width="800"
+            alt="Animated demonstration of SSR-Speech." />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="capttsseui" class="hero">
+  <div class="hero-body">
+    <div class="container is-fluid">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h3 class="title is-4">CapTTS-SE Interface</h3>
+        </div>
+      </div>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <img src="./static/ui/capttsse.png" class="interpolation-image" width="800"
+            alt="Animated demonstration of SSR-Speech." />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="agentttsui" class="hero">
+  <div class="hero-body">
+    <div class="container is-fluid">
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <h3 class="title is-4">AgentTTS Interface</h3>
+        </div>
+      </div>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          <img src="./static/ui/agenttts.png" class="interpolation-image" width="800"
+            alt="Animated demonstration of SSR-Speech." />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <section class="section" id="BibTeX">
@@ -1862,7 +1985,7 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>@misc{wang2025capspeechenablingdownstreamapplications,
       title={CapSpeech: Enabling Downstream Applications in Style-Captioned Text-to-Speech}, 
-      author={Helin Wang and Jiarui Hai and Dading Chong and Karan Thakkar and Tiantian Feng and Dongchao Yang and Junhyeok Lee and Laureano Moro Velazquez and Jesus Villalba and Zengyi Qin and Shrikanth Narayanan and Mounya Elhiali and Najim Dehak},
+      author={Helin Wang and Jiarui Hai and Dading Chong and Karan Thakkar and Tiantian Feng and Dongchao Yang and Junhyeok Lee and Thomas Thebaud and Laureano Moro Velazquez and Jesus Villalba and Zengyi Qin and Shrikanth Narayanan and Mounya Elhiali and Najim Dehak},
       year={2025},
       eprint={2506.02863},
       archivePrefix={arXiv},
